Fixed the excessive scrollbars in the app [#823]

--- a/comixed-webui/src/app/app.component.scss
+++ b/comixed-webui/src/app/app.component.scss
@@ -7,9 +7,10 @@
   z-index: 100;
 }
 
-#cx-main-content-area {
-  height: 100%;
-  overflow-y: scroll;
+mat-sidenav {
+  width: 33%;
+  min-width: 225px;
+  max-width: 275px;
 }
 
 #cx-footer {
